add test config